# Echo

./: .env.example  .gitignore  PRD.md  README.md  alembic.ini  deploy.sh  docker-compose.yml  index.html  package-lock.json  package.json  pyproject.toml  tsconfig.tsbuildinfo
alembic/: env.py
alembic/versions/: 20260224_01_initial_schema.py  20260224_02_add_mood_entry_status.py  20260224_03_add_user_stripe_customer_id.py
app/: main.py
app/api/: routes.py
app/auth/: dependencies.py  service.py
app/core/: deps.py
app/db/: base.py  crud.py  models.py
app/media/: r2.py
app/models/: schemas.py
app/services/: echo_pipeline.py  hume_service.py  pipeline.py  reflection_service.py  stripe_service.py
docs/: echo-journal-prd.md
frontend/: index.html  package.json  tailwind.config.ts  vite.config.ts
frontend/src/: App.tsx  styles.css
scripts/: deploy-supabase.sh
src/: App.tsx  index.css
src/components/: AppShell.tsx  CommandPalette.tsx  EntryCard.tsx  ErrorState.tsx  FeatureGate.tsx  IdeaDetailPanel.tsx  IdeaInspectorPanel.tsx  IdeaNetworkCanvas.tsx  InsightDetailPanel.tsx  InsightNeuralCanvas.tsx  InspectorDrawer.tsx  LoadingSkeleton.tsx  MinimalHeader.tsx  NeuralCanvas.tsx  OnboardingTooltip.tsx  ProtectedRoute.tsx  RecordButton.tsx  SavedTreesDrawer.tsx  SavedTreesPanel.tsx  StreakDisplay.tsx  TimelinePanel.tsx  Waveform.tsx
src/hooks/: useAuth.ts  useIdeaTreeStore.ts  useRecorder.ts  useStreak.test.ts  useStreak.ts  useUserPlan.ts
src/lib/: auth.ts  backfillIdeas.ts  backfillInsights.ts  edgeFunctions.ts  env.ts  layout.ts  (+6 more)
tests/: test_api.py
(+61 files in other folders)
